--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,14 @@
+0.3
+===
+
+* Changed ada:module to ada:package
+* Fixed more Python 3.x incompatibilities
+
+0.2
+===
+
+* Fixed some problems with Python 3.x
+
 0.1
 ===
 
